<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Stuff -->
    <string name="app_name">30-day Challenges Manager</string>

    <!-- Titles -->
    <string name="title_activity_challenge_detail">Challenge</string>
    <string name="title_activity_challenge_lists">Challenges</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="title_challenge_notificationTime">Notification</string>
    <string name="title_challenge_snoozeTime">Snooze</string>
    <string name="title_challenge_edit">Edit Challenge</string>
    <string name="title_challenge_new">New Challenge</string>
    <string name="title_challengeState_all">All</string>
    <string name="title_challengeState_complete">Complete</string>
    <string name="title_challengeState_onGoing">On Going</string>
    <string name="title_reminder">Reminder</string>

    <!-- Actions -->
    <string name="action_cancel">Cancel</string>
    <string name="action_challenge_new">New Challenge</string>
    <string name="action_challengeAttempt_new">New Challenge Attempt</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>

    <!-- Messages -->
    <string name="message_challenge_completed">Completed on %s</string>
    <string name="message_challengeAttempt_firstDay">Started on %s</string>

    <!-- Hint -->
    <string name="hint_challenge_name">Challenge name</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>

    <!-- Empty -->
    <string name="empty_challengeAttemptList">No challenges attempts yet</string>
    <string name="empty_challengeList_all">Here your challenges will appear</string>
    <string name="empty_challengeList_complete">All your completed challenges will appear here</string>
    <string name="empty_challengeList_onGoing">Your current challenges will appear here</string>
    <string name="emptyAction_challengeAttemptList">New attempt</string>
    <string name="emptyAction_challengeList_all">New challenge</string>
    <string name="emptyAction_challengeList_onGoing">New challenge attempt</string>

    <!-- Format -->
    <string name="format_time_hourMinute">%1$d:%2$02d h</string>
    <string name="format_time_minute">%d min</string>

    <!-- Errors -->
    <string name="error_dateTimeFormat">Error on date/time format</string>

    <!-- Others -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

</resources>
